methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:18: error: not found: value marqueSol
  marqueSol()
  ^