methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  
  
}

def flower(c:Color, p:Color){
  setCouleurBrosse(p)
	baisseBrosse()
  avance()
  avance()
  recule()
  gauche()
  avance()
  recule()
  recule()
  avance()
  setCouleurBrosse(c)
  marqueSol()
  
}

def marquerSol(){
  baisseBrosse()
  leveBrosse()
}